--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>aarthik-saathi-insight</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="aarthik-saathi-insight" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta name="description" content="Aarthik Saathi - Your Financial Companion" />
+    <meta name="author" content="Aarthik Saathi" />
+    <title>Aarthik Saathi</title>
+    <meta property="og:title" content="Aarthik Saathi" />
+    <meta property="og:description" content="Aarthik Saathi - Your Financial Companion" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:image" content="/opengraph-image.png" />
+    <meta property="og:url" content="https://aarthiksaathi.com" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Aarthik Saathi" />
+    <meta name="twitter:description" content="Aarthik Saathi - Your Financial Companion" />
+    <meta name="twitter:site" content="@aarthiksaathi" />
+    <meta name="twitter:image" content="/opengraph-image.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
